# MCTR

./: .gitignore  README.md  launch_carla.sh  readme.md  requirements.txt
Digital_Twin/Carla/Blueprints/Weather/: BP_Sky.uasset
Digital_Twin/Carla/Blueprints/Weather/Curves/: SkylightIntensity.uasset
Digital_Twin/Carla/Blueprints/Weather/Materials/: M_SkyTimeOfDay.uasset  WeatherMaterialParameters.uasset
Digital_Twin/Carla/Maps/: Digital_Twin.uasset  Digital_Twin_map.umap  Drift_map.umap  Drift_map_BuiltData.uasset  Test_map.umap  Test_map_BuiltData.uasset  defaultMat.uasset  digital_twin.uasset
carla-ros-bridge/carla_ws/src/carla_stack/: launch_carla_ros_bridge.sh  launch_ros_bridge_with_ego.sh
carla-ros-bridge/carla_ws/src/carla_stack/carla_controller/: CMakeLists.txt  controller_manager.py  package.xml  setup.py
carla-ros-bridge/carla_ws/src/carla_stack/carla_controller/delaunay/: delaunay.py
carla-ros-bridge/carla_ws/src/carla_stack/carla_controller/delaunay_ftg/: delaunay_ftg.py
carla-ros-bridge/carla_ws/src/carla_stack/carla_controller/launch/: controller_manager.launch
carla-ros-bridge/carla_ws/src/carla_stack/carla_full_throttle/: CMakeLists.txt  package.xml
carla-ros-bridge/carla_ws/src/carla_stack/carla_full_throttle/launch/: full_throttle.launch
carla-ros-bridge/carla_ws/src/carla_stack/carla_full_throttle/scripts/: full_throttle_node.py
carla-ros-bridge/carla_ws/src/carla_stack/spawn_f1tenth/: CMakeLists.txt  package.xml
controller/: controller_manager.py
controller/mctr/: mctr.py
rcarla_example/: tmp.ply
(+13 files in other folders)
